# hs-othello

./: .gitignore  .travis.yml  LICENSE  README.md  hs-othello.cabal  stack.yaml
Othello/: Core.hs  Game.hs  Main.hs  Solvers.hs
Othello/Renderer/: FreeType.hs  GLFW.hs  Gloss.hs
