name:                hs-othello
version:             0.0.0.1
-- synopsis:
-- description:
homepage:            https://github.com/hikky-n/hs-othello#readme
license:             MIT
license-file:        LICENSE
author:              hikky-n
maintainer:          hikky-n@excite-jp
copyright:           (c) 2017 hikky-n
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable hothello
  hs-source-dirs:      .
  main-is:             Othello/Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mersenne-random-pure64
                     , time
                     , gloss
                     , GLFW
  other-modules:       Othello.Solvers
                     , Othello.Core
                     , Othello.Game
                     , Othello.Renderer.Gloss
                     , Othello.Renderer.GLFW
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hikky-n/hs-othello
